--- a/layouts/shortcodes/hero.html
+++ b/layouts/shortcodes/hero.html
@@ -7,5 +7,5 @@
     <div class="subtitle">
         {{ .Inner | markdownify }}
     </div>
-    <a href="{{ if $isEnglish }}/en/contact{{ else }}/sv/contact{{ end }}" class="cta-button">{{ if $isEnglish }}Get in Touch{{ else }}Kontakta oss{{ end }}</a>
+    <a href="{{ if $isEnglish }}/en/contact/{{ else }}/sv/contact/{{ end }}" class="cta-button">{{ if $isEnglish }}Get in Touch{{ else }}Kontakta oss{{ end }}</a>
 </section>
