Changed footer and added SM-links to contact page

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -29,6 +29,9 @@
                             <a href="https://www.linkedin.com/company/omaidev/about/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                         </li>
                         <li>
+                            <a href="https://www.instagram.com/omai.dev/" target="_blank" rel="noopener noreferrer">Instragram</a>
+                        </li>
+                        <li>
                             <a href="{{ if $isEnglish }}/en/cookiepolicy{{ else }}/sv/cookiepolicy{{ end }}">{{ if $isEnglish }}Cookie Policy{{ else }}Cookiepolicy{{ end }}</a>
                         </li>
                     </ul>
