--- a/layouts/shortcodes/hero.html
+++ b/layouts/shortcodes/hero.html
@@ -1,11 +1,7 @@
-{{ $isEnglish := false }}
-{{ with .Page }}
-    {{ $isEnglish = or (eq .Language.Lang "en") (hasPrefix .RelPermalink "/en/") }}
-{{ end }}
 <section class="hero">
     <h1>{{ with .Page }}{{ .Site.Title }}{{ else }}Omai{{ end }}</h1>
     <div class="subtitle">
         {{ .Inner | markdownify }}
     </div>
-    <a href="{{ if $isEnglish }}/en/contact/{{ else }}/sv/contact/{{ end }}" class="cta-button">{{ if $isEnglish }}Get in Touch{{ else }}Kontakta oss{{ end }}</a>
+    <a href="/contact/" class="cta-button">Kontakta oss</a>
 </section>
