--- a/layouts/shortcodes/hero.html
+++ b/layouts/shortcodes/hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
-    <h1>{{ with .Page }}{{ .Site.Title }}{{ else }}Omai{{ end }}</h1>
-    <div class="subtitle">
+    <h1>OMAI</h1>
+    <div class="hero-content">
         {{ .Inner | markdownify }}
     </div>
     <a href="/contact/" class="cta-button">Kontakta oss</a>
