--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-container">
         <div class="footer-top">
             <div class="footer-logo-section">
-                <img src="{{ "images/logos/omai-logo-bright-yellow.png" | relURL }}" alt="{{ .Site.Title }}" class="footer-logo-img">
+                <img src="{{ "images/logos/omai_FFD451.png" | relURL }}" alt="{{ .Site.Title }}" class="footer-logo-img">
             </div>
             <div class="footer-columns">
                 <div class="footer-column">
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p class="footer-copyright">© 2025 Omai</p>
+            <p class="footer-copyright">© 2026 OMAI</p>
         </div>
     </div>
 </footer>
