--- a/layouts/shortcodes/hero.html
+++ b/layouts/shortcodes/hero.html
@@ -3,5 +3,5 @@
     <div class="hero-content">
         {{ .Inner | markdownify }}
     </div>
-    <a href="/contact/" class="cta-button">Kontakta oss</a>
+    <a href="/kontakt/" class="cta-button">Kontakta oss</a>
 </section>
