--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,6 +669,37 @@ main {
     opacity: 0.8;
 }
 
+.post-content ul {
+    margin-bottom: 1.5rem;
+    padding-left: 0;
+    list-style: none;
+}
+
+.post-content ul li {
+    padding-left: 2rem;
+    padding-right: 3rem;
+    position: relative;
+    margin-bottom: 0.75rem;
+}
+
+.post-content ul li::before {
+    content: "•";
+    position: absolute;
+    left: 0.5rem;
+    color: var(--deep-indigo);
+    font-size: 1.5em;
+    line-height: 1;
+}
+
+.post-content ol {
+    margin-bottom: 1.5rem;
+    padding-left: 1.5rem;
+}
+
+.post-content ol li {
+    margin-bottom: 0.75rem;
+}
+
 .post-image {
     margin: 2.5rem 0;
     width: 100%;
