--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -32,6 +32,7 @@
                 <li><a href="/" {{ if .IsHome }}class="active"{{ end }}>Hem</a></li>
                 <li><a href="/om-oss/" {{ if eq .Title "Om oss" }}class="active"{{ end }}>Om oss</a></li>
                 <li><a href="/om-ai/" {{ if eq .Section "om-ai" }}class="active"{{ end }}>Om AI</a></li>
+                <li><a href="/case/" {{ if eq .Section "case" }}class="active"{{ end }}>Case</a></li>
                 <li><a href="/jobba-pa-omai/" {{ if eq .Title "Jobba på OMAI" }}class="active"{{ end }}>Jobba på OMAI</a></li>
                 <li><a href="/kontakt/" {{ if eq .Title "Kontakt" }}class="active"{{ end }}>Kontakt</a></li>
             </ul>
